# my-sec-ops-platform

./: CHANGELOG.md  CLAUDE.md  GitHub-Workflow-Guide.md  README.md  SKILL.md  main.py  pyproject.toml
src/: main.py
src/security/: elasticsearch_client.py
static/css/: dashboard.css
templates/: base.html  dashboard.html  threat_hunting.html
