[project]
name = "my-sec-ops-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.13.2",
    "elasticsearch>=9.2.0",
    "fastapi>=0.122.0",
    "jinja2>=3.1.6",
    "plotly>=6.5.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.38.0",
]
